(mobile) Fix alignment of mobile menu

--- a/src/app/styles/_offcanvas.scss
+++ b/src/app/styles/_offcanvas.scss
@@ -39,13 +39,6 @@
   .offcanvas-body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-  }
-
-  &:not(.offcanvas-bottom) {
-    .offcanvas-body {
-      justify-content: center;
-    }
   }
 
   .menu-item {
